--- a/scss/main.scss
+++ b/scss/main.scss
@@ -686,6 +686,8 @@ main {
     background: #fff;
     padding: 2rem;
     overflow: hidden;
+
+    width: 95%;
   
     .title-header {
         font-size: 2rem;
@@ -703,7 +705,7 @@ main {
         &:before, &:after {
             position: absolute;
             top: 0;
-            width: 250px;
+            width: 50px;
             height: 100%;
             content: "";
             z-index: 2;
@@ -798,7 +800,7 @@ main {
 
     @keyframes slide {
         from { transform: translateX(0); }
-        to { transform: translateX(-50%); }
+        to { transform: translateX(-100%); }
     }
 
     .review-promise {
