--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@ svg {
   height: auto;
 }
 .container {
-  max-width: 1320px;
+  // max-width: 1320px;
   margin-inline: auto;
   padding-inline: 0.75rem;
 }
@@ -68,7 +68,12 @@ svg {
 img {
   max-width: 100%;
 }
-
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
 
 
 // NAV BAR
@@ -348,7 +353,7 @@ main {
               width: 30px;
               height: 30px;
               border-radius: 50%;
-              font-size: --tiny-font-size;
+              font-size: $tiny-font-size;
               
 
               svg {
@@ -446,6 +451,8 @@ main {
       background: url('bg-imgs/Spring\ selection\ elephants.png');
       background-position: left;
       background-size: cover;
+
+
   }
 
   // PRODUCTS SECTION
@@ -687,6 +694,11 @@ main {
     padding: 2rem;
     overflow: hidden;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     width: 95%;
   
     .title-header {
@@ -807,8 +819,8 @@ main {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 95%;
-        height: 400px;
+        width: 100%;
+        height: 550px;
         gap: 2rem;
         margin-top: 2rem;
         
@@ -839,6 +851,161 @@ main {
   }
     
 
+  /*=============== NEWSLETTER ===============*/
+  .newsletter {
+    background-color: wheat;
+    width: 100%;
+
+    &.home__newsletter {
+      margin-top: 2rem;
+    }
+
+    &__container {
+      grid-template-columns: repeat(2, 3.5fr) 5fr;
+      align-items: center;
+      column-gap: 3rem;
+    }
+
+    &__title {
+      column-gap: 1rem;
+      font-size: $large-font-size;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__icon {
+      width: 40px;
+    }
+
+    &__description {
+      color: $title-color;
+      font-family: $font-main;
+      font-size: $small-font-size;
+      font-weight: $weight-600;
+      text-align: center;
+    }
+
+    &__form {
+      display: flex;
+    }
+
+    &__input,
+    &__btn {
+      font-size: $small-font-size;
+    }
+
+    &__input {
+      background-color: $body-color;
+      padding-inline: 1.25rem;
+      width: 100%;
+      height: 48px;
+      border-radius: 0.25rem 0 0 0.25rem;
+    }
+
+    &__btn {
+      background-color: $title-color;
+      color: $body-color;
+      padding-inline: 2rem;
+      border-radius: 0 0.25rem 0.25rem 0;
+      font-family: $font-main;
+      font-weight: $weight-500;
+      letter-spacing: 0.5px;
+      cursor: pointer;
+      transition: all 0.3s $transition;
+
+      &:hover {
+        background-color: $first-color;
+      }
+    }
+  }
+
+}
 
 
+
+/*=============== FOOTER ===============*/
+.footer {
+  &__container {
+    grid-template-columns: 4.5fr repeat(2, 2fr) 3.5fr;
+    padding-block: 2.5rem;
+    width: 95%;
+    display: flex;
+    justify-content: space-evenly;
+
+    .footer__logo-img {
+      width: 120px;
+    }
+  }
+
+  &__content {
+    .footer__subtitle {
+      color: $text-color-light;
+      font-size: $small-font-size;
+      margin-block: 1.25rem 0.625rem;
+    }
+
+    .footer__description {
+      margin-bottom: 0.25rem;
+
+      span {
+        font-weight: $weight-600;
+      }
+    }
+  }
+
+  &__social {
+    .footer__subtitle {
+      margin-top: 1.875rem;
+    }
+
+    &-links {
+      column-gap: 0.25rem;
+      list-style: none;
+
+    }
+
+    .footer__social-icon {
+      width: 20px;
+      opacity: 0.7;
+    }
+  }
+
+  &__title {
+    font-size: $large-font-size;
+    margin-block: 1rem 1.25rem;
+  }
+
+  &__link {
+    color: $title-color;
+    font-size: $small-font-size;
+    margin-bottom: 1rem;
+    display: block;
+    transition: all 0.3s $transition;
+    list-style: none;
+    
+
+    &:hover {
+      color: $first-color;
+      margin-left: 0.25rem;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-block: 1.25rem;
+    border-top: 1px solid $border-color-alt;
+
+    .copyright,
+    .designer {
+      color: $text-color-light;
+      font-size: $small-font-size;
+    }
+  }
+}
+
+/*=============== NEW ARRIVALS ===============*/
+.new__arrivals {
+  overflow: hidden;
 }
