started working on new arrivals section

--- a/scss/main.css
+++ b/scss/main.css
@@ -381,6 +381,213 @@ main .spring-selction-section {
   background-position: left;
   background-size: cover;
 }
+main .spring-selction-section .new__arrivals {
+  width: 95%;
+  padding-block: 1rem;
+  overflow: hidden;
+}
+main .spring-selction-section .new__arrivals .section__title {
+  font-size: 22px;
+  font-weight: 600;
+  margin-top: 0;
+}
+main .spring-selction-section .new__arrivals .section__title span {
+  color: #e91e63;
+}
+main .spring-selction-section .new__arrivals .new__container {
+  height: auto;
+}
+main .spring-selction-section .new__arrivals .new__container .cards {
+  display: flex;
+  gap: 1rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item {
+  border: 1px solid hsl(129, 36%, 85%);
+  border-radius: 1.5rem;
+  transition: all 0.2s cubic-bezier(0, 0, 0.05, 1);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item:hover {
+  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner {
+  padding: 0.625rem 0.75rem 0.75rem;
+  position: relative;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__images {
+  display: block;
+  overflow: hidden;
+  border-radius: 1.25rem;
+  position: relative;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__images .product__img {
+  vertical-align: middle;
+  transition: all 1.5s cubic-bezier(0, 0, 0.05, 1);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__images .product__img.hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner:hover .product__img.default {
+  opacity: 0;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner:hover .product__img.hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner:hover .product__actions {
+  opacity: 1;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+  transition: all 0.2s cubic-bezier(0, 0, 0.05, 1);
+  opacity: 0;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn {
+  width: 40px;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: hsl(129, 44%, 94%);
+  border: 1px solid hsl(129, 36%, 85%);
+  color: hsl(154, 13%, 32%);
+  font-size: 0.875rem;
+  position: relative;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn::before, main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn::after {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+  opacity: 0;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn::before {
+  content: "";
+  top: -2px;
+  border: 0.5rem solid transparent;
+  border-top-color: hsl(176, 88%, 27%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn::after {
+  content: attr(aria-label);
+  bottom: 100%;
+  background-color: hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
+  font-size: 0.6875rem;
+  white-space: nowrap;
+  padding-inline: 0.625rem;
+  border-radius: 0.25rem;
+  line-height: 2.58;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn:hover {
+  background-color: hsl(176, 88%, 27%);
+  border-color: hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn:hover::before, main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__actions .action__btn:hover::after {
+  opacity: 1;
+  transform: translateX(-50%) translateY(-0.5rem);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__badge {
+  position: absolute;
+  left: 1.25rem;
+  top: 1.25rem;
+  background-color: hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
+  padding: 0.25rem 0.625rem;
+  border-radius: 2.5rem;
+  font-size: 0.6875rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__badge.light-pink {
+  background-color: hsl(341, 100%, 73%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__badge.light-green {
+  background-color: hsl(155, 20%, 67%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__badge.light-orange {
+  background-color: hsl(24, 100%, 73%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__banner .product__badge.light-blue {
+  background-color: hsl(202, 53%, 76%);
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content {
+  padding: 0 1.25rem 1.125rem;
+  position: relative;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .product__category {
+  color: hsl(60, 1%, 56%);
+  font-size: 0.75rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .product__title {
+  font-size: 1rem;
+  margin-block: 0.75rem 0.5rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .product__rating {
+  color: hsl(42, 100%, 50%);
+  font-size: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .product__price {
+  display: flex;
+  gap: 0.5rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .product__price .new__price {
+  font-size: 1.125rem;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .cart__btn {
+  position: absolute;
+  bottom: 1.6rem;
+  right: 1.25rem;
+  width: 40px;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: hsl(129, 44%, 94%);
+  border: 1px solid hsl(129, 36%, 85%);
+  color: hsl(154, 13%, 32%);
+  font-size: 0.875rem;
+  transition: all 0.3s ease;
+}
+main .spring-selction-section .new__arrivals .new__container .cards .product__item .product__content .cart__btn:hover {
+  background-color: hsl(176, 88%, 27%);
+  border-color: hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
+}
+main .spring-selction-section .new__arrivals .swiper {
+  overflow: initial;
+}
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next::after, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev::after {
+  content: "";
+}
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev {
+  top: -0.7rem;
+  background-color: wheat;
+  border: 1px solid whitesmoke;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-size: 0.6875rem;
+}
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next svg, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev svg {
+  width: 100%;
+  height: 100%;
+  stroke: black;
+}
+main .spring-selction-section .new__arrivals .swiper .swiper-button-prev {
+  left: initial;
+  right: 2.5rem;
+}
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next {
+  right: 0;
+}
 main .products-section {
   width: 95%;
 }
@@ -831,9 +1038,4 @@ main .newsletter__btn:hover {
 .footer__bottom .designer {
   color: hsl(60, 1%, 56%);
   font-size: 0.875rem;
-}
-
-/*=============== NEW ARRIVALS ===============*/
-.new__arrivals {
-  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
