--- a/scss/main.scss
+++ b/scss/main.scss
@@ -443,16 +443,264 @@ main {
 
   //SPRING SELECTION SECTION
   .spring-selction-section {
-      height: 300vh;
-      width: 100%;
+    height: 300vh;
+    width: 100%;
 
-      margin-top: 100px;
+    margin-top: 100px;
 
-      background: url('bg-imgs/Spring\ selection\ elephants.png');
-      background-position: left;
-      background-size: cover;
+    background: url('bg-imgs/Spring\ selection\ elephants.png');
+    background-position: left;
+    background-size: cover;
+  
+  //NEW ARRIVALS SECTION
+    .new__arrivals {
+      width: 95%;
+      padding-block: 1rem;
+      overflow: hidden;
 
+      .section__title {
+        font-size: 22px;
+        font-weight: 600;
+        margin-top: 0;
 
+        span {
+            color: #e91e63;
+        }
+      }
+
+      .new__container {
+        height: auto;
+
+        .cards {
+          display: flex;
+          gap: 1rem;
+
+          .product__item {
+            border: 1px solid $border-color;
+            border-radius: 1.5rem;
+            transition: all 0.2s $transition;
+        
+            &:hover {
+              box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+            }
+        
+            .product__banner {
+              padding: 0.625rem 0.75rem 0.75rem;
+              position: relative;
+        
+              .product__images {
+                display: block;
+                overflow: hidden;
+                border-radius: 1.25rem;
+                position: relative;
+        
+                .product__img {
+                  vertical-align: middle;
+                  transition: all 1.5s $transition;
+        
+                  &.hover {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    opacity: 0;
+                  }
+                }
+              }
+        
+              &:hover {
+                .product__img.default {
+                  opacity: 0;
+                }
+                .product__img.hover {
+                  opacity: 1;
+                  transform: scale(1.1);
+                }
+                .product__actions {
+                  opacity: 1;
+                }
+              }
+        
+              .product__actions {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                display: flex;
+                column-gap: 0.5rem;
+                transition: all 0.2s $transition;
+                opacity: 0;
+        
+                .action__btn {
+                  width: 40px;
+                  height: 40px;
+                  line-height: 42px;
+                  text-align: center;
+                  border-radius: 50%;
+                  background-color: $first-color-alt;
+                  border: 1px solid $border-color;
+                  color: $text-color;
+                  font-size: $small-font-size;
+                  position: relative;
+        
+                  &::before,
+                  &::after {
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+                    opacity: 0;
+                  }
+        
+                  &::before {
+                    content: '';
+                    top: -2px;
+                    border: 0.5rem solid transparent;
+                    border-top-color: $first-color;
+                  }
+        
+                  &::after {
+                    content: attr(aria-label);
+                    bottom: 100%;
+                    background-color: $first-color;
+                    color: $body-color;
+                    font-size: $tiny-font-size;
+                    white-space: nowrap;
+                    padding-inline: 0.625rem;
+                    border-radius: 0.25rem;
+                    line-height: 2.58;
+                  }
+        
+                  &:hover {
+                    background-color: $first-color;
+                    border-color: $first-color;
+                    color: $body-color;
+        
+                    &::before,
+                    &::after {
+                      opacity: 1;
+                      transform: translateX(-50%) translateY(-0.5rem);
+                    }
+                  }
+                }
+              }
+        
+              .product__badge {
+                position: absolute;
+                left: 1.25rem;
+                top: 1.25rem;
+                background-color: $first-color;
+                color: $body-color;
+                padding: 0.25rem 0.625rem;
+                border-radius: 2.5rem;
+                font-size: $tiny-font-size;
+        
+                &.light-pink {
+                  background-color: hsl(341, 100%, 73%);
+                }
+        
+                &.light-green {
+                  background-color: hsl(155, 20%, 67%);
+                }
+        
+                &.light-orange {
+                  background-color: hsl(24, 100%, 73%);
+                }
+        
+                &.light-blue {
+                  background-color: hsl(202, 53%, 76%);
+                }
+              }
+            }
+        
+            .product__content {
+              padding: 0 1.25rem 1.125rem;
+              position: relative;
+        
+              .product__category {
+                color: $text-color-light;
+                font-size: $smaller-font-size;
+              }
+        
+              .product__title {
+                font-size: $normal-font-size;
+                margin-block: 0.75rem 0.5rem;
+              }
+        
+              .product__rating {
+                color: hsl(42, 100%, 50%);
+                font-size: $smaller-font-size;
+                margin-bottom: 0.75rem;
+              }
+        
+              .product__price {
+                display: flex;
+                gap: 0.5rem;
+        
+                .new__price {
+                  font-size: $large-font-size;
+                }
+              }
+        
+              .cart__btn {
+                position: absolute;
+                bottom: 1.6rem;
+                right: 1.25rem;
+                width: 40px;
+                height: 40px;
+                line-height: 42px;
+                text-align: center;
+                border-radius: 50%;
+                background-color: $first-color-alt;
+                border: 1px solid $border-color;
+                color: $text-color;
+                font-size: $small-font-size;
+                transition: all 0.3s ease;
+        
+                &:hover {
+                  background-color: $first-color;
+                  border-color: $first-color;
+                  color: $body-color;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .swiper {
+          overflow: initial;
+
+          .swiper-button-next::after, .swiper-button-prev::after {
+              content: '';
+          }
+          .swiper-button-next, .swiper-button-prev {
+              top: -0.7rem;
+
+              background-color: wheat;
+              border: 1px solid whitesmoke;
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              font-size: $tiny-font-size;
+              
+
+              svg {
+                  width: 100%;
+                  height: 100%;
+                  
+                  stroke: black; //arrow color
+              }
+          }
+
+          .swiper-button-prev {
+              left: initial;
+              right: 2.5rem;
+          }
+          .swiper-button-next {
+              right: 0;
+          }
+      }
+    }
   }
 
   // PRODUCTS SECTION
@@ -1003,9 +1251,4 @@ main {
       font-size: $small-font-size;
     }
   }
-}
-
-/*=============== NEW ARRIVALS ===============*/
-.new__arrivals {
-  overflow: hidden;
 }
