--- a/scss/main.css
+++ b/scss/main.css
@@ -405,6 +405,7 @@ main .spring-selction-section .new__arrivals .new__container .cards .product__it
   border: 1px solid hsl(129, 36%, 85%);
   border-radius: 1.5rem;
   transition: all 0.2s cubic-bezier(0, 0, 0.05, 1);
+  background-color: white;
 }
 main .spring-selction-section .new__arrivals .new__container .cards .product__item:hover {
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
@@ -564,11 +565,12 @@ main .spring-selction-section .new__arrivals .new__container .cards .product__it
 main .spring-selction-section .new__arrivals .swiper {
   overflow: initial;
 }
-main .spring-selction-section .new__arrivals .swiper .swiper-button-next::after, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev::after {
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next-arrivals::after, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev-arrivals::after {
   content: "";
 }
-main .spring-selction-section .new__arrivals .swiper .swiper-button-next, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev {
-  top: -0.7rem;
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next-arrivals, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev-arrivals {
+  top: -3.5rem;
+  position: absolute;
   background-color: wheat;
   border: 1px solid whitesmoke;
   width: 30px;
@@ -576,16 +578,16 @@ main .spring-selction-section .new__arrivals .swiper .swiper-button-next, main .
   border-radius: 50%;
   font-size: 0.6875rem;
 }
-main .spring-selction-section .new__arrivals .swiper .swiper-button-next svg, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev svg {
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next-arrivals svg, main .spring-selction-section .new__arrivals .swiper .swiper-button-prev-arrivals svg {
   width: 100%;
   height: 100%;
   stroke: black;
 }
-main .spring-selction-section .new__arrivals .swiper .swiper-button-prev {
+main .spring-selction-section .new__arrivals .swiper .swiper-button-prev-arrivals {
   left: initial;
   right: 2.5rem;
 }
-main .spring-selction-section .new__arrivals .swiper .swiper-button-next {
+main .spring-selction-section .new__arrivals .swiper .swiper-button-next-arrivals {
   right: 0;
 }
 main .products-section {
