--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,6 +74,53 @@ ul {
 a {
   text-decoration: none;
 }
+/*=============== BUTTONS ===============*/
+.btn {
+  display: inline-block;
+  background-color: var(--first-color);
+  border: 2px solid var(--first-color);
+  color: var(--body-color);
+  padding-inline: 1.75rem;
+  height: 49px;
+  line-height: 49px;
+  border-radius: 0.25rem;
+  font-family: var(--second-font);
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-700);
+  transition: all 0.4s var(--transition);
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: var(--first-color);
+}
+
+.btn--md,
+.btn--sm {
+  font-family: var(--body-font);
+}
+
+.btn--md {
+  height: 45px;
+  line-height: 42px;
+}
+
+.btn--sm {
+  height: 40px;
+  line-height: 36px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+}
+
+
+
+
+
+
 
 
 // NAV BAR
@@ -1256,3 +1303,107 @@ main {
     }
   }
 }
+
+
+
+/*=============== DEALS ===============*/
+.deals-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.deals__container {
+  grid-template-columns: repeat(2, 1fr);
+  width: 95%;
+}
+
+.deals__item:nth-child(1) {
+  background-image: url(bg-imgs/deals-1.jpg);
+}
+
+.deals__item:nth-child(2) {
+  background-image: url(bg-imgs/deals-2.png);
+}
+
+.deals__item {
+  padding: 3rem;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.deals__brand {
+  color: $first-color;
+  font-size: $h3-font-size;
+  margin-bottom: 0.25rem;
+}
+
+.deals__category {
+  font-size: $small-font-size;
+}
+
+.deals__title {
+  max-width: 240px;
+  font-size: $large-font-size;
+  font-weight: $weight-400;
+  line-height: 1.3;
+}
+
+.deals__price .new__price,
+.deals__price .old__price {
+  font-size: $large-font-size;
+}
+
+.deals__price .new__price {
+  color: hsl(352, 100%, 60%)
+}
+
+.deals__countdown-text {
+  margin-bottom: 0.25rem;
+}
+
+.countdown {
+  display: flex;
+  column-gap: 1.5rem;
+}
+
+.countdown__amount {
+  position: relative;
+}
+
+.countdown__amount::after {
+  content: ':';
+  color: $title-color;
+  font-size: $large-font-size;
+  position: absolute;
+  right: -25%;
+  top: 20%;
+}
+
+.countdown__period {
+  background-color: $first-color;
+  color: $body-color;
+  width: 60px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 0.25rem;
+  font-size: $large-font-size;
+  font-weight: $weight-600;
+  margin-bottom: 0.5rem;
+}
+
+.unit {
+  font-size: $small-font-size;
+  text-align: center;
+  display: block;
+}
+
+.deals__btn .btn {
+  background-color: transparent;
+  color: $first-color;
+  border: solid 2px;
+}
+
