--- a/scss/main.css
+++ b/scss/main.css
@@ -88,27 +88,21 @@ a {
 /*=============== BUTTONS ===============*/
 .btn {
   display: inline-block;
-  background-color: var(--first-color);
-  border: 2px solid var(--first-color);
-  color: var(--body-color);
+  background-color: hsl(176, 88%, 27%);
+  border: 2px solid hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
   padding-inline: 1.75rem;
   height: 49px;
   line-height: 49px;
   border-radius: 0.25rem;
-  font-family: var(--second-font);
-  font-size: var(--small-font-size);
-  font-weight: var(--weight-700);
-  transition: all 0.4s var(--transition);
+  font-size: 0.875rem;
+  font-weight: 700;
+  transition: all 0.4s cubic-bezier(0, 0, 0.05, 1);
 }
 
 .btn:hover {
   background-color: transparent;
-  color: var(--first-color);
-}
-
-.btn--md,
-.btn--sm {
-  font-family: var(--body-font);
+  color: hsl(176, 88%, 27%);
 }
 
 .btn--md {
@@ -417,7 +411,11 @@ main .banner-section .banner .pic-4 .inner-box {
   height: 100%;
 }
 main .spring-selction-section {
-  height: 300vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 2000px;
   width: 100%;
   margin-top: 100px;
   background: url("bg-imgs/Spring selection elephants.png");
@@ -1090,6 +1088,7 @@ main .newsletter__btn:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .deals__container {
@@ -1186,4 +1185,58 @@ main .newsletter__btn:hover {
   background-color: transparent;
   color: hsl(176, 88%, 27%);
   border: solid 2px;
+}
+
+.showcase__container {
+  grid-template-columns: repeat(4, 1fr);
+  width: 95%;
+}
+
+.showcase__wrapper .section__title {
+  font-size: 1rem;
+  border-bottom: 1px solid hsl(113, 15%, 90%);
+  padding-bottom: 0.75rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.showcase__wrapper .section__title::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1.3px;
+  width: 50px;
+  height: 2px;
+  background-color: hsl(176, 88%, 27%);
+}
+
+.showcase__item {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+  background-color: white;
+}
+
+.showcase__item:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.showcase__img {
+  width: 86px;
+  height: 100%;
+}
+
+.showcase__content {
+  width: calc(100% - 110px);
+}
+
+.showcase__title {
+  font-size: 0.875rem;
+  color: #000;
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem;
 }/*# sourceMappingURL=main.css.map */
