--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,28 +77,27 @@ a {
 /*=============== BUTTONS ===============*/
 .btn {
   display: inline-block;
-  background-color: var(--first-color);
-  border: 2px solid var(--first-color);
-  color: var(--body-color);
+  background-color: $first-color;
+  border: 2px solid $first-color;
+  color: $body-color;
   padding-inline: 1.75rem;
   height: 49px;
   line-height: 49px;
   border-radius: 0.25rem;
-  font-family: var(--second-font);
-  font-size: var(--small-font-size);
-  font-weight: var(--weight-700);
-  transition: all 0.4s var(--transition);
+  font-size: $small-font-size;
+  font-weight: $weight-700;
+  transition: all 0.4s $transition;
 }
 
 .btn:hover {
   background-color: transparent;
-  color: var(--first-color);
+  color: $first-color;
 }
 
-.btn--md,
-.btn--sm {
-  font-family: var(--body-font);
-}
+// .btn--md,
+// .btn--sm {
+  
+// }
 
 .btn--md {
   height: 45px;
@@ -490,7 +489,12 @@ main {
 
   //SPRING SELECTION SECTION
   .spring-selction-section {
-    height: 300vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 2000px;
     width: 100%;
 
     margin-top: 100px;
@@ -1311,6 +1315,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .deals__container {
   grid-template-columns: repeat(2, 1fr);
@@ -1407,3 +1412,64 @@ main {
   border: solid 2px;
 }
 
+
+
+
+// SHOWCASE SECTION
+.showcase-section {
+
+}
+.showcase__container {
+  grid-template-columns: repeat(4, 1fr);
+  // max-width: 1320px;
+  width: 95%;
+}
+
+.showcase__wrapper .section__title {
+  font-size: $normal-font-size;
+  border-bottom: 1px solid $border-color-alt;
+  padding-bottom: 0.75rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.showcase__wrapper .section__title::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1.3px;
+  width: 50px;
+  height: 2px;
+  background-color: $first-color;
+}
+
+.showcase__item {
+  display: flex;
+  align-items: center;
+  column-gap: 1.5rem;
+  background-color: white;
+  
+}
+
+.showcase__item:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.showcase__img {
+  width: 86px;
+  height: 100%;
+}
+
+.showcase__content {
+  width: calc(100% - 110px);
+}
+
+.showcase__title {
+  font-size: $small-font-size;
+  color: #000;
+  font-weight: $weight-500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem;
+}
