--- a/scss/main.css
+++ b/scss/main.css
@@ -133,64 +133,89 @@ header {
   display: flex;
   justify-content: center;
 }
-header nav {
-  width: 85%;
-  height: 80px;
-  border-radius: 100px;
-  background-color: white;
+header .nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  height: 100%;
+  width: 85%;
+  justify-content: space-between;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  padding: 0 50px;
+  background-color: white;
+  border-radius: 100px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
-header nav .nav-logo {
-  margin-left: 50px;
-  width: auto;
-  height: 90%;
+header .nav__logo-img {
+  width: 200px;
 }
-header nav .nav-logo a {
-  display: block;
-  height: 100%;
-}
-header nav .nav-logo a img {
-  height: 100%;
-  width: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-header nav .nav-links {
-  list-style: none;
+header .nav__menu {
   display: flex;
-  gap: 30px;
+  align-items: center;
+  flex-grow: 1;
+  margin-left: 2.5rem;
 }
-header nav .nav-links li a {
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-  font-size: 16px;
+header .nav__menu-top {
+  display: none;
 }
-header nav .nav-links li a:hover {
-  text-decoration: underline;
-  color: gray;
-}
-header nav .nav-buttons {
-  margin-right: 50px;
+header .nav__list {
   display: flex;
-  gap: 5px;
+  align-items: center;
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+  margin-right: auto;
 }
-header nav .nav-buttons button {
-  background-color: burlywood;
-  color: black;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 50px;
-  font-weight: bold;
+header .nav__link {
+  color: hsl(0, 0%, 13%);
+  font-weight: 700;
+  transition: all 0.2s cubic-bezier(0, 0, 0.05, 1);
+}
+header .nav__link.active-link, header .nav__link:hover {
+  color: rgb(216, 174, 122);
+}
+header .nav__toggle {
+  display: none;
+}
+header .nav .header__search {
+  width: 340px;
+  position: relative;
+}
+header .nav .header__search .form__input {
+  width: 100%;
+}
+header .nav .header__search .search__btn {
+  position: absolute;
+  top: 24%;
+  right: 1.25rem;
   cursor: pointer;
-  transition: all 0.3s ease;
+  background-color: transparent;
+  border: none;
 }
-header nav .nav-buttons button:hover {
-  background-color: black;
+header .nav .header__user-actions {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+  justify-content: center;
+}
+header .nav .header__action-btn {
+  position: relative;
+}
+header .nav .header__action-btn img {
+  width: 24px;
+}
+header .nav .header__action-btn .count {
+  position: absolute;
+  top: -0.625rem;
+  right: -0.625rem;
+  background-color: rgb(201, 141, 29);
   color: white;
+  height: 18px;
+  width: 18px;
+  line-height: 18px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 0.6875rem;
 }
 
 main {
