--- a/scss/main.scss
+++ b/scss/main.scss
@@ -135,81 +135,105 @@ header {
 
     display: flex;
     justify-content: center;
-    nav {
-        width: 85%;
-        height: 80px;
-        border-radius: 100px;
 
-        background-color: white; //nav bg color
+  .nav {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 85%;
+    justify-content: space-between;
+    column-gap: 1rem;
+    padding: 0 50px;
+    background-color: white;
+    border-radius: 100px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        .nav-logo {
-            margin-left: 50px;
-
-            width: auto;
-            height: 90%; 
-        
-            a {
-                display: block;
-                height: 100%;
-        
-                img {
-                    height: 100%;
-                    width: auto;
-                    object-fit: contain;
-                }
-            }
-        }
-        
-        .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 30px;
-        
-            li {
-                a {
-                    text-decoration: none;
-                    color: black;
-                    font-weight: bold;
-                    font-size: 16px;
-        
-                    &:hover {
-                        text-decoration: underline;
-                        color: gray;
-                    }
-                }
-            }
-        }
-        
-        .nav-buttons {
-            margin-right: 50px;
-
-            display: flex;
-            gap: 5px;
-        
-            button {
-                background-color: burlywood;
-                color: black;
-                padding: 10px 20px;
-                border: none;
-                border-radius: 50px;
-                font-weight: bold;
-                cursor: pointer;
-                transition: all 0.3s ease;
-        
-                &:hover {
-                    background-color: black;
-                    color: white;
-                }
-            }
-        }
-        
+    &__logo-img {
+      width: 200px;
     }
+
+    &__menu {
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      margin-left: 2.5rem;
+
+      &-top {
+        display: none;
+      }
+    }
+
+    &__list {
+      display: flex;
+      align-items: center;
+      column-gap: 2.5rem;
+      margin-right: auto;
+    }
+
+    &__link {
+      color: $title-color;
+      font-weight: $weight-700;
+      transition: all 0.2s $transition;
+
+      &.active-link,
+      &:hover {
+        color: rgb(216, 174, 122);
+      }
+    }
+
+    &__toggle {
+      display: none;
+    }
+
+    .header {
+      &__search {
+        width: 340px;
+        position: relative;
+
+        .form__input {
+          width: 100%;
+        }
+
+        .search__btn {
+          position: absolute;
+          top: 24%;
+          right: 1.25rem;
+          cursor: pointer;
+          background-color: transparent;
+          border: none;
+        }
+      }
+
+      &__user-actions {
+        display: flex;
+        align-items: center;
+        column-gap: 1.25rem;
+        justify-content: center;
+      }
+
+      &__action-btn {
+        position: relative;
+
+        img {
+          width: 24px;
+        }
+
+        .count {
+          position: absolute;
+          top: -0.625rem;
+          right: -0.625rem;
+          background-color: rgb(201, 141, 29);
+          color: white;
+          height: 18px;
+          width: 18px;
+          line-height: 18px;
+          border-radius: 50%;
+          text-align: center;
+          font-size: $tiny-font-size;
+        }
+      }
+    }
+  }      
 }
 
 // MAIN
